website/i18n/pt-BR/docusaurus-plugin-content-docs/version-0.6.0/reference/invowkfile-schema.mdx
---
sidebar_position: 2
---

import Snippet from '@site/src/components/Snippet';

# Referência de Schema do Invowkfile

:::warning Alpha — Schema Pode Mudar
O schema do invowkfile ainda está evoluindo. Campos, tipos e regras de validação **podem mudar entre releases** enquanto estabilizamos o formato. Sempre verifique o [changelog](https://github.com/invowk/invowk/releases) ao fazer upgrade.
:::

Referência completa para o schema do invowkfile. Invowkfiles usam formato [CUE](https://cuelang.org/) para definir comandos.
Invowkfiles são validados como structs fechadas, então campos desconhecidos geram erro de validação.

## Estrutura Raiz

Todo invowkfile deve definir ao menos um comando em `cmds`:

<Snippet id="reference/invowkfile/root-structure" />

:::note Metadados do Módulo Ficam em invowkmod.cue
Campos como `module`, `version`, `description` e `requires` pertencem a `invowkmod.cue` e são rejeitados em `invowkfile.cue`.
:::

### default_shell

**Tipo:** `string`  
**Obrigatório:** Não  
**Padrão:** Padrão do sistema

Sobrescreve o shell padrão para execução no runtime native.

<Snippet id="reference/invowkfile/default-shell-example" />

### workdir

**Tipo:** `string`  
**Obrigatório:** Não  
**Padrão:** Diretório do invowkfile

Diretório de trabalho padrão para todos os comandos. Pode ser absoluto ou relativo à localização do invowkfile.

<Snippet id="reference/invowkfile/workdir-example" />

### env

**Tipo:** `#EnvConfig`  
**Obrigatório:** Não

Configuração de environment global aplicada a todos os comandos. Veja [EnvConfig](#envconfig).

### depends_on

**Tipo:** `#DependsOn`  
**Obrigatório:** Não

Dependências globais que se aplicam a todos os comandos. Veja [DependsOn](#dependson).

### cmds

**Tipo:** `[...#Command]`  
**Obrigatório:** Sim (pelo menos um)

Lista de comandos definidos neste invowkfile. Veja [Command](#command).

:::caution Nota de Migração
O nome do campo é `cmds`, não `commands`. Usar `commands` causará um erro de validação CUE porque o schema define `commands?: _|_` (valor bottom) para impor o nome correto.
:::

---

## Command

Define um comando executável:

<Snippet id="reference/invowkfile/command-structure" />

### name

**Tipo:** `string` (padrão: `^[a-zA-Z][a-zA-Z0-9_ -]*$`)  
**Obrigatório:** Sim

O identificador do comando. Deve começar com uma letra.

<Snippet id="reference/invowkfile/command-name-examples" />

### description

**Tipo:** `string`
**Obrigatório:** Não

Texto de ajuda para o comando. Quando fornecido, deve ser não-vazio (validado pelo padrão regex `^\s*\S.*$` -- strings contendo apenas espaços são rejeitadas).

<Snippet id="reference/invowkfile/command-description-example" />

### category

**Tipo:** `string`
**Obrigatório:** Não

Agrupa este comando sob um título na saída de `invowk cmd`. Quando fornecido, deve ser não-vazio (validado pelo padrão regex `^\s*\S.*$` — strings contendo apenas espaços são rejeitadas).

<Snippet id="reference/invowkfile/category-example" />

### implementations

**Tipo:** `[...#Implementation]`
**Obrigatório:** Sim (pelo menos um)

As implementations executáveis. Veja [Implementation](#implementation).

### env

**Tipo:** `#EnvConfig`
**Obrigatório:** Não

Configuração de environment para este comando. O env no nível de comando é aplicado antes do env no nível de implementation. Veja [EnvConfig](#envconfig).

### workdir

**Tipo:** `string`
**Obrigatório:** Não

Diretório de trabalho para execução do comando. Sobrescreve o workdir do nível raiz, mas pode ser sobrescrito pelo workdir no nível de implementation. Pode ser absoluto ou relativo à localização do invowkfile.

### depends_on

**Tipo:** `#DependsOn`
**Obrigatório:** Não

Dependências que devem ser satisfeitas antes de executar este comando. Veja [DependsOn](#dependson).

### flags

**Tipo:** `[...#Flag]`  
**Obrigatório:** Não

Flags de linha de comando para este comando. Veja [Flag](#flag).

:::warning Flags Reservadas
As seguintes flags são reservadas pelo invowk e não podem ser usadas em comandos definidos pelo usuário:
- `ivk-env-file` (`-e`), `ivk-env-var` (`-E`)
- `ivk-env-inherit-mode`, `ivk-env-inherit-allow`, `ivk-env-inherit-deny`
- `ivk-workdir` (`-w`), `ivk-runtime` (`-r`), `ivk-from` (`-f`)
- `ivk-force-rebuild`, `ivk-dry-run`
- `ivk-watch` (`-W`)
- `ivk-verbose` (`-v`), `ivk-config` (`-c`), `ivk-interactive` (`-i`)
- `help` (`-h`), `version`

Além disso, qualquer flag que comece com o prefixo `ivk-`, `invowk-` ou `i-` é reservada para flags do sistema.
:::

### args

**Tipo:** `[...#Argument]`  
**Obrigatório:** Não

Argumentos posicionais para este comando. Veja [Argument](#argument).

### watch

**Tipo:** `#WatchConfig`
**Obrigatório:** Não

Configuração de file-watching para este comando. Quando definido, `patterns` controla quais arquivos são monitorados. Quando `--ivk-watch` é passado sem uma configuração `watch`, o invowk monitora todos os arquivos (`**/*`) no diretório de trabalho. Veja [WatchConfig](#watchconfig).

<Snippet id="reference/invowkfile/watch-config-example" />

---

## Implementation

Define como um comando é executado:

<Snippet id="reference/invowkfile/implementation-structure" />

### script

**Tipo:** `string` (não vazio)  
**Obrigatório:** Sim

Os comandos de shell a executar OU um caminho para um arquivo de script.

<Snippet id="reference/invowkfile/script-examples" />

**Extensões reconhecidas:** `.sh`, `.bash`, `.ps1`, `.bat`, `.cmd`, `.py`, `.rb`, `.pl`, `.zsh`, `.fish`

### runtimes

**Tipo:** `[...#RuntimeConfig]`  
**Obrigatório:** Sim (pelo menos um)

Os runtimes que podem executar esta implementation. O primeiro runtime é o padrão.

<Snippet id="reference/invowkfile/runtimes-examples" />

### platforms

**Tipo:** `[...#PlatformConfig]`
**Obrigatório:** Sim (pelo menos um)

Especifique quais sistemas operacionais esta implementation suporta.

<Snippet id="reference/invowkfile/platforms-example" />

### env

**Tipo:** `#EnvConfig`
**Obrigatório:** Não

Configuração de environment para esta implementation. Mesclado com o env no nível de comando: arquivos da implementation são carregados depois dos arquivos do comando, e variáveis da implementation sobrescrevem as do comando. Veja [EnvConfig](#envconfig).

### workdir

**Tipo:** `string`
**Obrigatório:** Não

Diretório de trabalho para esta implementation. Sobrescreve as configurações de workdir tanto do nível raiz quanto do nível de comando. Pode ser absoluto ou relativo à localização do invowkfile.

### depends_on

**Tipo:** `#DependsOn`
**Obrigatório:** Não

Dependências que devem ser satisfeitas antes de executar esta implementation. Combinado com o depends_on no nível raiz e de comando. **Sempre validado no sistema host**, independentemente do runtime selecionado. Para validar dependências dentro do ambiente do runtime (ex: dentro de um container), use `depends_on` dentro do bloco de runtime. Veja [DependsOn](#dependson).

### timeout

**Tipo:** `#DurationString`
**Obrigatório:** Não

Duração máxima de execução. Deve ser uma string de duração Go válida (ex: `"30s"`, `"5m"`, `"1h30m"`). Quando excedido, o comando é cancelado e retorna um erro de timeout. O valor de timeout é validado cedo (antes das verificações de dependência) para falhar rapidamente em valores inválidos. Veja [DurationString](#durationstring).

<Snippet id="reference/invowkfile/timeout-example" />

---

## RuntimeConfig

Configuração para um runtime específico:

<Snippet id="reference/invowkfile/runtime-config-structure" />

### name

**Tipo:** `"native" | "virtual" | "container"`  
**Obrigatório:** Sim

O tipo de runtime.

### interpreter

**Tipo:** `string`  
**Disponível para:** `native`, `container`  
**Padrão:** `"auto"` (detectar do shebang)

Especifica como executar o script.

<Snippet id="reference/invowkfile/interpreter-examples" />

:::note
O runtime virtual usa mvdan/sh e não consegue executar interpretadores não-shell.
:::

### env_inherit_mode

**Tipo:** `"none" | "allow" | "all"`  
**Disponível para:** `native`, `virtual`, `container`  
**Padrão:** `all` para native/virtual, `none` para container

Controla se o ambiente do host é herdado pelo runtime.

### env_inherit_allow

**Tipo:** `[...string]`  
**Disponível para:** `native`, `virtual`, `container`

Lista de variáveis de ambiente permitidas quando `env_inherit_mode` é `"allow"`.

### env_inherit_deny

**Tipo:** `[...string]`  
**Disponível para:** `native`, `virtual`, `container`

Lista de variáveis de ambiente negadas (aplica-se a qualquer modo).

<Snippet id="reference/invowkfile/env-inherit-example" />

### enable_host_ssh

**Tipo:** `bool`  
**Disponível para:** `container`  
**Padrão:** `false`

Habilita acesso SSH do container de volta para o host. Quando habilitado, o Invowk inicia um servidor SSH e fornece credenciais via variáveis de ambiente:

- `INVOWK_SSH_ENABLED`
- `INVOWK_SSH_HOST`
- `INVOWK_SSH_PORT`
- `INVOWK_SSH_USER`
- `INVOWK_SSH_TOKEN`

<Snippet id="reference/invowkfile/enable-host-ssh-example" />

### containerfile / image

**Tipo:** `string`  
**Disponível para:** `container`

Especifique a origem do container. São **mutuamente exclusivos**.

<Snippet id="reference/invowkfile/containerfile-image-examples" />

### volumes

**Tipo:** `[...string]`  
**Disponível para:** `container`

Montagens de volume no formato `host:container[:options]`.

<Snippet id="reference/invowkfile/volumes-example" />

### ports

**Tipo:** `[...string]`  
**Disponível para:** `container`

Mapeamentos de portas no formato `host:container`.

<Snippet id="reference/invowkfile/ports-example" />

### depends_on

**Tipo:** `#DependsOn`
**Disponível para:** `container`
**Obrigatório:** Não

Dependências validadas dentro do ambiente do container. Diferentemente do `depends_on` no nível raiz/comando/implementação (que sempre verificam o host), o `depends_on` no nível de runtime container valida contra o próprio ambiente do container — útil para verificar que a imagem do container possui as ferramentas, arquivos e configuração necessários.

Verificado apenas quando o runtime container é selecionado no momento da execução.

---

## PlatformConfig

<Snippet id="reference/invowkfile/platform-config-structure" />

---

## EnvConfig

Configuração de environment:

<Snippet id="reference/invowkfile/env-config-structure" />

### files

Arquivos dotenv para carregar. Arquivos são carregados em ordem; os últimos sobrescrevem os anteriores.

<Snippet id="reference/invowkfile/env-files-example" />

### vars

Variáveis de ambiente como pares chave-valor.

<Snippet id="reference/invowkfile/env-vars-example" />

---

## DependsOn

Especificação de dependências:

<Snippet id="reference/invowkfile/depends-on-structure" />

### ToolDependency

<Snippet id="reference/invowkfile/tool-dependency-structure" />

<Snippet id="reference/invowkfile/tool-dependency-example" />

### CommandDependency

:::caution Nome do Campo
O nome do campo para dependências de comandos é `cmds`, não `commands`. Usar `commands` causará um erro de validação CUE porque o schema define `commands?: _|_` (valor bottom) para impor o nome correto do campo.
:::

<Snippet id="reference/invowkfile/command-dependency-structure" />

### FilepathDependency

<Snippet id="reference/invowkfile/filepath-dependency-structure" />

### CapabilityDependency

<Snippet id="reference/invowkfile/capability-dependency-structure" />

### EnvVarDependency

<Snippet id="reference/invowkfile/env-var-dependency-structure" />

### CustomCheckDependency

<Snippet id="reference/invowkfile/custom-check-dependency-structure" />

---

## Flag

Definição de flag de linha de comando:

<Snippet id="reference/invowkfile/flag-structure" />

| Propriedade | Obrigatório | Descrição |
|-------------|-------------|-----------|
| `name` | Sim | Nome da flag (alfanumérico, hífens, underscores) |
| `description` | **Sim** | Texto de ajuda (deve ser não-vazio) |
| `type` | Não | `string`, `bool`, `int`, `float` (padrão: `string`) |
| `default_value` | Não | Padrão se não fornecido (não combina com `required`) |
| `required` | Não | Deve ser fornecido (não combina com `default_value`) |
| `short` | Não | Alias de uma letra (`a`-`z` ou `A`-`Z`) |
| `validation` | Não | Padrão regex para validação de valor |

<Snippet id="reference/invowkfile/flag-example" />

---

## Argument

Definição de argumento posicional:

<Snippet id="reference/invowkfile/argument-structure" />

| Propriedade | Obrigatório | Descrição |
|-------------|-------------|-----------|
| `name` | Sim | Nome do argumento (alfanumérico, hífens, underscores) |
| `description` | **Sim** | Texto de ajuda (deve ser não-vazio) |
| `type` | Não | `string`, `int`, `float` (padrão: `string`; `bool` não suportado) |
| `default_value` | Não | Padrão se não fornecido (não combina com `required`) |
| `required` | Não | Deve ser fornecido (não combina com `default_value`) |
| `variadic` | Não | Aceitar múltiplos valores (apenas permitido no último argumento) |
| `validation` | Não | Padrão regex para validação de valor |

<Snippet id="reference/invowkfile/argument-example" />

**Variáveis de ambiente para argumentos:**
- `INVOWK_ARG_<NAME>` - O valor do argumento
- Para variádicos: `INVOWK_ARG_<NAME>_COUNT`, `INVOWK_ARG_<NAME>_1`, `INVOWK_ARG_<NAME>_2`, etc.

---

## WatchConfig

Configuração de file-watching para reexecução automática de comandos:

<Snippet id="reference/invowkfile/watch-config-structure" />

### patterns

**Tipo:** `[...string]` (pelo menos um)
**Obrigatório:** Sim

Padrões glob para arquivos a monitorar. Padrões suportam `**` para correspondência recursiva (ex: `"src/**/*.go"`, `"*.ts"`). Caminhos são relativos ao diretório de trabalho efetivo do comando.

### debounce

**Tipo:** `#DurationString`
**Obrigatório:** Não
**Padrão:** `"500ms"`

Atraso antes de reexecutar após detectar uma mudança de arquivo. Veja [DurationString](#durationstring).

### clear_screen

**Tipo:** `bool`
**Obrigatório:** Não
**Padrão:** `false`

Quando `true`, limpa o terminal antes de cada reexecução.

### ignore

**Tipo:** `[...string]`
**Obrigatório:** Não

Padrões glob adicionais para arquivos/diretórios a excluir do monitoramento. Mesclados com padrões padrão embutidos (`.git/**`, `node_modules/**`, `__pycache__/**`, `*.swp`, etc.).

---

## DurationString

<Snippet id="reference/invowkfile/duration-string-type" />

Tipo compartilhado usado por [`#Implementation.timeout`](#timeout) e [`#WatchConfig.debounce`](#debounce). Exemplos válidos: `"500ms"`, `"30s"`, `"5m"`, `"1h30m"`, `"2.5s"`.

---

## Exemplo Completo

<Snippet id="reference/invowkfile/complete-example" />
